--- a/test-output/old/BaseTest/methods.html
+++ b/test-output/old/BaseTest/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>BaseTest</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4878b">  <td>24/01/04 23:49:10</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.capstone.tests.ECommerceTest@2fd953a6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461698165</td>   <td></td> </tr>
-<tr bgcolor="8ba3c7">  <td>24/01/04 23:49:29</td>   <td>18278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ECommerceTest.testECommerceScenario()[pri:0, instance:com.capstone.tests.ECommerceTest@2fd953a6]">testECommerceScenario</td> 
-  <td>main@461698165</td>   <td></td> </tr>
-<tr bgcolor="f4878b">  <td>24/01/04 23:49:52</td>   <td>41941</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.capstone.tests.ECommerceTest@2fd953a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461698165</td>   <td></td> </tr>
+<tr bgcolor="a29aa2">  <td>24/01/06 02:51:54</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.capstone.tests.ECommerceTest@a4add54]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001321875</td>   <td></td> </tr>
+<tr bgcolor="aca97a">  <td>24/01/06 02:52:12</td>   <td>18002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ECommerceTest.testECommerceScenario()[pri:0, instance:com.capstone.tests.ECommerceTest@a4add54]">testECommerceScenario</td> 
+  <td>main@2001321875</td>   <td></td> </tr>
+<tr bgcolor="a29aa2">  <td>24/01/06 02:52:40</td>   <td>45967</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.capstone.tests.ECommerceTest@a4add54]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001321875</td>   <td></td> </tr>
 </table>
