--- a/test-output/old/ECommerceTest/methods.html
+++ b/test-output/old/ECommerceTest/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ECommerceTest</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a29aa2">  <td>24/01/06 21:47:55</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.capstone.tests.ECommerceTest@a4add54]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001321875</td>   <td></td> </tr>
-<tr bgcolor="aca97a">  <td>24/01/06 21:48:01</td>   <td>6207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ECommerceTest.testECommerceScenario()[pri:0, instance:com.capstone.tests.ECommerceTest@a4add54]">testECommerceScenario</td> 
-  <td>main@2001321875</td>   <td></td> </tr>
-<tr bgcolor="a29aa2">  <td>24/01/06 21:48:07</td>   <td>12268</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.capstone.tests.ECommerceTest@a4add54]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001321875</td>   <td></td> </tr>
+<tr bgcolor="bdb894">  <td>24/01/06 22:06:27</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.capstone.tests.ECommerceTest@141e5bef]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@322112198</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/01/06 22:06:32</td>   <td>4885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ECommerceTest.testECommerceScenario()[pri:0, instance:com.capstone.tests.ECommerceTest@141e5bef]">testECommerceScenario</td> 
+  <td>main@322112198</td>   <td></td> </tr>
+<tr bgcolor="bdb894">  <td>24/01/06 22:06:38</td>   <td>10521</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.capstone.tests.ECommerceTest@141e5bef]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@322112198</td>   <td></td> </tr>
 </table>
